cloud-client change to cloud-provider

--- a/readme
+++ b/readme
@@ -1,1 +1,5 @@
 demo for Eureka with Zuul and RibbonMQ
+1.访问http://127.0.0.1:8080/test/1测试服务内部调用，且失败会调用fallback方法返回值。 
+2.访问http://127.0.0.1:8080/test/2测试服务内部调用，则正常调用cloud-client的服务。 
+3.我们可以使用统一入口，调用cloud-client服务： 
+访问的url：http://127.0.0.1:8761/techouse/usersystem/hello/2 
